@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4HepRepFile.hh,v 1.3 2002-01-29 21:03:41 perl Exp $
+// $Id: G4HepRepFile.hh,v 1.4 2002-02-02 04:00:12 perl Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
