@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2002-01-29 21:03:35 perl Exp $
+$Id: History,v 1.13 2002-02-02 04:00:08 perl Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,13 @@ committal in the CVS repository !
 
 History file for visualization/HepRep sub-category
 ---------------------------------------------------------------------------
+
+1st February 2002  Joseph Perl
+- Defer file opening until first real HepRepType is to be written.
+- Moved HepRep code from AddThis to AddPrimitive.
+- Add additional levels to hierarchy if any appear to have been
+  removed by culling.
+- Add visibility attribute.
 
 29th January 2002  Joseph Perl
 - Relocate file-opening logic to constructor and ShowView
